logs/insanities.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/insanities'...
Listing './lib/python3.5/site-packages/insanities/forms'...
Compiling './lib/python3.5/site-packages/insanities/forms/convs.py'...
***   File "./lib/python3.5/site-packages/insanities/forms/convs.py", line 107
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/insanities/forms/form.py'...
***   File "./lib/python3.5/site-packages/insanities/forms/form.py", line 113
    except convs.ValidationError, e:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/insanities/templates'...
Listing './lib/python3.5/site-packages/insanities/templates/jinja2'...
Listing './lib/python3.5/site-packages/insanities/templates/jinja2/templates'...
Listing './lib/python3.5/site-packages/insanities/templates/jinja2/templates/forms'...
Listing './lib/python3.5/site-packages/insanities/templates/jinja2/templates/widgets'...
Listing './lib/python3.5/site-packages/insanities/templates/mint'...
Listing './lib/python3.5/site-packages/insanities/templates/mint/templates'...
Listing './lib/python3.5/site-packages/insanities/templates/mint/templates/forms'...
Listing './lib/python3.5/site-packages/insanities/templates/mint/templates/widgets'...
Listing './lib/python3.5/site-packages/insanities/utils'...
Compiling './lib/python3.5/site-packages/insanities/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/insanities/utils/__init__.py", line 70
    ur'[^\x09\x0A\x0D\x20-\uD7FF\uE000-\uFFFD%s]' % _char_tail,
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/insanities/web'...
Compiling './lib/python3.5/site-packages/insanities/web/core.py'...
***   File "./lib/python3.5/site-packages/insanities/web/core.py", line 83
    except HTTPException, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/insanities/web/url.py'...
***   File "./lib/python3.5/site-packages/insanities/web/url.py", line 319
    except ConvertError, err:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/insanities-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
